--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,76 +1,19 @@
-<!--todo: clean v4 from code-->
-<android.support.v4.widget.DrawerLayout
-    android:id="@+id/main_activity_drawer_layout"
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:sothree="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/main_activity_drawer_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/white"
-    >
-    <!-- The main sender view -->
-    <RelativeLayout
-        android:id="@+id/main_activity_main_content"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:animateLayoutChanges="true">
+    android:fitsSystemWindows="true">
 
-        <TextView
-            android:id="@+id/no_gps_signal_text_view"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_alignParentEnd="false"
-            android:background="@color/red"
-            android:text="@string/no_gps_signal"
-            android:textAlignment="center"
-            android:textColor="@color/white"
-            />
+    <!-- The main content view -->
+    <include layout="@layout/activity_main_content" />
 
-        <TextView
-            android:id="@+id/no_network_text_view"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_alignParentEnd="false"
-            android:layout_below="@id/no_gps_signal_text_view"
-            android:background="@color/red"
-            android:text="@string/no_network"
-            android:textAlignment="center"
-            android:textColor="@color/white"
-            />
-
-        <!--todo: for integration MVVM-->
-        <FrameLayout
-            android:id="@+id/container"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            tools:context="com.project.MainActivity"
-            tools:ignore="MergeRootFrame"/>
-
-        <!--<FrameLayout-->
-        <!--android:id="@+id/container_footer"-->
-        <!--android:layout_width="match_parent"-->
-        <!--android:layout_height="wrap_content"-->
-        <!--android:layout_alignParentBottom="true"-->
-        <!--/>-->
-        <FrameLayout
-            android:id="@+id/container_footer"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_alignParentBottom="true"
-            />
-
-    </RelativeLayout>
     <!-- The navigation drawer -->
-    <ListView
-        android:id="@+id/left_drawer_list_view"
-        android:layout_width="240dp"
-        android:layout_height="match_parent"
-        android:layout_gravity="start"
-        android:background="@color/white"
-        android:choiceMode="singleChoice"
-        android:divider="@android:color/transparent"
-        android:dividerHeight="0dp"/>
-</android.support.v4.widget.DrawerLayout>
+    <include layout="@layout/activity_main_drawer" />
 
+</android.support.v4.widget.DrawerLayout>
 
 
 
