--- a/app/src/main/res/menu/drawer_content.xml
+++ b/app/src/main/res/menu/drawer_content.xml
@@ -4,14 +4,14 @@
         <item
             android:id="@+id/nav_home"
             android:icon="@drawable/ic_dashboard"
-            android:title="Home" />
+            android:title="@string/navigation_home_item" />
         <item
             android:id="@+id/nav_vector"
             android:icon="@android:drawable/ic_menu_edit"
-            android:title="Vector Manipulation" />
+            android:title="@string/navigation_vector_item" />
         <item
             android:id="@+id/nav_map"
             android:icon="@android:drawable/ic_dialog_map"
-            android:title="Map Manipulation" />
+            android:title="@string/navigation_map_item" />
     </group>
 </menu>
