--- a/app/src/main/res/layout/activity_main_content.xml
+++ b/app/src/main/res/layout/activity_main_content.xml
@@ -90,7 +90,7 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
-                android:text="Message"
+                android:text="@string/message_info_default"
                 android:textColor="@color/white"
                 android:textSize="@dimen/font_size_large" />
 
@@ -99,7 +99,7 @@
                 android:layout_height="40sp"
                 android:background="@drawable/circle_text"
                 android:gravity="center"
-                android:text="5"
+                android:text="@string/new_messages_default"
                 android:textColor="@color/white"
                 android:textSize="@dimen/font_size_large" />
         </android.support.design.widget.CoordinatorLayout>
@@ -114,11 +114,6 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
-                android:text="texttexttexttexttexttexttexttexttexttexttexttexttexttexttexttexttexttexttexttexttexttexttexttexttexttexttexttexttext
-                texttexttexttexttexttexttexttexttexttexttexttexttexttexttexttexttexttexttexttexttexttexttexttexttexttexttexttexttexttexttexttext
-                texttexttexttexttexttexttexttexttexttexttexttexttexttexttexttexttexttexttexttexttexttexttexttexttexttexttexttexttexttexttexttext
-                texttexttexttexttexttexttexttexttexttexttexttexttexttexttexttexttexttexttexttexttexttexttexttexttexttexttexttexttexttexttexttext
-                texttexttexttexttexttexttexttexttexttexttexttexttexttexttexttexttexttexttexttexttexttexttexttexttexttexttexttexttexttexttexttext"
                 android:textColor="@color/black" />
 
 
