--- a/app/src/main/res/layout/activity_main_content.xml
+++ b/app/src/main/res/layout/activity_main_content.xml
@@ -90,6 +90,8 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
+                android:layout_marginStart="@dimen/spacing_small"
+                android:gravity="center"
                 android:text="@string/message_info_default"
                 android:textColor="@color/white"
                 android:textSize="@dimen/font_size_large" />
@@ -97,6 +99,8 @@
             <TextView
                 android:layout_width="40sp"
                 android:layout_height="40sp"
+                android:layout_marginEnd="@dimen/spacing_small"
+                android:layout_gravity="end"
                 android:background="@drawable/circle_text"
                 android:gravity="center"
                 android:text="@string/new_messages_default"
