--- a/app/src/main/res/layout/fragment_messages_master_list.xml
+++ b/app/src/main/res/layout/fragment_messages_master_list.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.v7.widget.RecyclerView
-    android:id="@+id/list"
+    android:id="@+id/fragment_messages_master_list"
     android:name="com.teamagam.gimelgimel.app.view.fragments.MessagesMasterFragment"
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
