--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -25,5 +25,6 @@
     <!--Message List Colors-->
     <color name="message_unread">@color/colorPrimary</color>
     <color name="message_read">@color/colorPrimaryDark</color>
+    <color name="message_chosen">@color/colorAccent</color>
 
 </resources>
