--- a/app/src/main/res/layout/fragment_cesium.xml
+++ b/app/src/main/res/layout/fragment_cesium.xml
@@ -5,10 +5,17 @@
              android:layout_height="match_parent"
              tools:context=".app.view.fragments.ViewerFragment">
 
-    <com.teamagam.gimelgimel.app.view.viewer.cesium.CesiumMapView
+    <!--<com.teamagam.gimelgimel.app.view.viewer.cesium.CesiumMapView-->
+        <!--android:id="@+id/gg_map_view"-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="match_parent"/>-->
+
+
+    <FrameLayout
         android:id="@+id/gg_map_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
+
 
     <LinearLayout
         android:layout_width="wrap_content"
