cross walk works with xml in layout file

--- a/app/src/main/res/layout/fragment_cesium.xml
+++ b/app/src/main/res/layout/fragment_cesium.xml
@@ -5,8 +5,8 @@
              android:layout_height="match_parent"
              tools:context=".app.view.fragments.ViewerFragment">
 
-    <FrameLayout
-        android:id="@+id/gg_map_view_container"
+    <com.teamagam.gimelgimel.app.view.viewer.cesium.CesiumMapView
+        android:id="@+id/gg_map_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
 
@@ -16,25 +16,25 @@
         android:layout_height="wrap_content"
         android:layout_gravity="right|bottom"
         android:orientation="vertical"
-        >
+    >
 
         <android.support.design.widget.FloatingActionButton
             android:id="@+id/locate_me_fab"
             style="@style/fab"
             android:src="@android:drawable/ic_dialog_map"
-            />
+        />
 
         <android.support.design.widget.FloatingActionButton
             android:id="@+id/camera_fab"
             style="@style/fab"
             android:src="@drawable/ic_camera"
-            />
+        />
 
         <android.support.design.widget.FloatingActionButton
             android:id="@+id/message_fab"
             style="@style/fab"
             android:src="@android:drawable/ic_dialog_email"
-            />
+        />
     </LinearLayout>
 
 </FrameLayout>
