--- a/app/src/main/res/layout/fragment_cesium.xml
+++ b/app/src/main/res/layout/fragment_cesium.xml
@@ -1,39 +1,35 @@
-<FrameLayout android:id="@+id/fragment_cesium_view"
-             xmlns:android="http://schemas.android.com/apk/res/android"
-             xmlns:tools="http://schemas.android.com/tools"
-             android:layout_width="match_parent"
-             android:layout_height="match_parent"
-             tools:context=".app.view.fragments.ViewerFragment">
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/fragment_cesium_view"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    tools:context=".app.view.fragments.ViewerFragment">
 
     <com.teamagam.gimelgimel.app.view.viewer.cesium.CesiumMapView
         android:id="@+id/gg_map_view"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+        android:layout_height="match_parent" />
 
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="right|bottom"
-        android:orientation="vertical"
-        >
+        android:orientation="vertical">
 
         <android.support.design.widget.FloatingActionButton
             android:id="@+id/locate_me_fab"
             style="@style/fab"
-            android:src="@android:drawable/ic_dialog_map"
-            />
+            android:src="@android:drawable/ic_dialog_map" />
 
         <android.support.design.widget.FloatingActionButton
             android:id="@+id/camera_fab"
             style="@style/fab"
-            android:src="@drawable/ic_camera"
-            />
+            android:src="@drawable/ic_camera" />
 
         <android.support.design.widget.FloatingActionButton
             android:id="@+id/message_fab"
             style="@style/fab"
-            android:src="@android:drawable/ic_dialog_email"
-            />
+            android:src="@android:drawable/ic_dialog_email" />
     </LinearLayout>
 
 </FrameLayout>
