integrating with messages master list

--- a/app/src/main/res/layout/fragment_messages_master_list.xml
+++ b/app/src/main/res/layout/fragment_messages_master_list.xml
@@ -1,15 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v7.widget.RecyclerView
-    android:id="@+id/fragment_messages_master_list"
-    android:name="com.teamagam.gimelgimel.app.view.fragments.MessagesMasterFragment"
+<FrameLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:layout_marginLeft="16dp"
-    android:layout_marginRight="16dp"
-    app:layoutManager="LinearLayoutManager"
-    android:choiceMode="singleChoice"
-    tools:context="com.teamagam.gimelgimel.app.view.fragments.MessagesMasterFragment"
-    tools:listitem="@layout/fragment_messages_list_item"/>
+    android:layout_height="match_parent">
+
+
+    <android.support.v7.widget.RecyclerView
+
+        android:id="@+id/fragment_messages_recycler"
+        android:name="com.teamagam.gimelgimel.app.view.fragments.MessagesMasterFragment"
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:tools="http://schemas.android.com/tools"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:choiceMode="singleChoice"
+        app:layoutManager="LinearLayoutManager"
+        tools:context="com.teamagam.gimelgimel.app.view.fragments.MessagesMasterFragment"
+        tools:listitem="@layout/fragment_messages_list_item"
+    />
+</FrameLayout>
