--- a/app/src/main/res/layout/activity_main_content.xml
+++ b/app/src/main/res/layout/activity_main_content.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.sothree.slidinguppanel.SlidingUpPanelLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<com.sothree.slidinguppanel.SlidingUpPanelLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:sothree="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -26,7 +27,7 @@
                 android:id="@+id/main.toolbar"
                 android:layout_width="match_parent"
                 android:layout_height="?attr/actionBarSize"
-                app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
+                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>
         </android.support.design.widget.AppBarLayout>
 
         <RelativeLayout
@@ -45,7 +46,7 @@
                 android:text="@string/no_gps_signal"
                 android:textAlignment="center"
                 android:textColor="@color/white"
-                android:visibility="gone" />
+                android:visibility="gone"/>
 
             <TextView
                 android:id="@+id/no_network_text_view"
@@ -57,83 +58,23 @@
                 android:text="@string/no_network"
                 android:textAlignment="center"
                 android:textColor="@color/white"
-                android:visibility="gone" />
+                android:visibility="gone"/>
 
             <FrameLayout
                 android:id="@+id/activity_main_container"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                tools:ignore="MergeRootFrame" />
+                tools:ignore="MergeRootFrame"/>
 
             <FrameLayout
                 android:id="@+id/activity_main_container_footer"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_alignParentBottom="true" />
+                android:layout_alignParentBottom="true"/>
 
         </RelativeLayout>
     </android.support.design.widget.CoordinatorLayout>
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical">
+    <include layout="@layout/fragment_messages_container"/>
 
-        <android.support.design.widget.CoordinatorLayout
-            android:id="@+id/message_title_layout"
-            android:layout_width="match_parent"
-            android:layout_height="68dp"
-            android:background="@drawable/message_panel_ripple">
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:layout_marginStart="@dimen/spacing_small"
-                android:gravity="center"
-                android:text="@string/message_info_default"
-                android:textColor="@color/white"
-                android:textSize="@dimen/font_size_large" />
-
-            <TextView
-                android:layout_width="40sp"
-                android:layout_height="40sp"
-                android:layout_gravity="end"
-                android:layout_marginEnd="@dimen/spacing_small"
-                android:background="@drawable/circle_text"
-                android:gravity="center"
-                android:text="@string/new_messages_default"
-                android:textColor="@color/white"
-                android:textSize="@dimen/font_size_large" />
-        </android.support.design.widget.CoordinatorLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:baselineAligned="false"
-            android:orientation="horizontal">
-
-            <!--
-            This layout is a two-pane layout for the Items master/detail flow.
-            -->
-
-            <android.support.v7.widget.RecyclerView
-                android:id="@+id/message_list_recyclerview"
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_weight="3" />
-
-            <View
-                android:layout_width="3dp"
-                android:layout_height="wrap_content"
-                android:background="@drawable/box_shadow" />
-
-            <FrameLayout
-                android:id="@+id/message_detail_container"
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_weight="4" />
-
-        </LinearLayout>
-
-    </LinearLayout>
 </com.sothree.slidinguppanel.SlidingUpPanelLayout>
