--- a/app/src/main/res/layout/fragment_text_message.xml
+++ b/app/src/main/res/layout/fragment_text_message.xml
@@ -1,9 +1,9 @@
-<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+              xmlns:tools="http://schemas.android.com/tools"
+              android:layout_width="match_parent"
+              android:layout_height="match_parent" android:orientation="vertical">
 
-    <include layout="@layout/message_detail_title" />
+    <include layout="@layout/message_detail_title"/>
 
     <FrameLayout
         android:layout_width="wrap_content"
@@ -13,11 +13,11 @@
         android:background="@drawable/balloon_incoming_normal">
 
         <TextView
-            android:id="@+id/message_text_content"
+            android:id="@+id/fragment_text_message_content"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="@dimen/spacing_normal"
-            android:text="Sample of very very very very very very long text" />
+            tools:text="Sample of very very very very very very long text" />
     </FrameLayout>
 
-</android.support.design.widget.CoordinatorLayout>
+</LinearLayout>
