--- a/app/src/main/res/layout/message_detail_title.xml
+++ b/app/src/main/res/layout/message_detail_title.xml
@@ -20,6 +20,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/spacing_normal"
+        android:layout_gravity="center_horizontal"
         android:textSize="@dimen/font_size_extra_large"
         tools:text="Teamagam"/>
 
