--- a/app/src/main/res/layout/fragment_image_message.xml
+++ b/app/src/main/res/layout/fragment_image_message.xml
@@ -14,7 +14,7 @@
         android:orientation="vertical">
 
         <com.facebook.drawee.view.SimpleDraweeView
-            android:id="@+id/dialog_image_view"
+            android:id="@+id/image_view"
             android:layout_width="300dp"
             android:layout_height="300dp"
             android:layout_gravity="top|center"
