--- a/app/src/main/res/layout/fragment_messages_container.xml
+++ b/app/src/main/res/layout/fragment_messages_container.xml
@@ -1,12 +1,14 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/fragment_messages_container"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="match_parent"
+    android:clickable="true"
     android:orientation="vertical"
-    tools:context=".app.view.fragments.messags_panel_fragments.MessagesContainerFragment">
+    tools:context="com.teamagam.gimelgimel.app.view.fragments.MessagesContainerFragment">
 
-    <FrameLayout
+    <android.support.constraint.ConstraintLayout
         android:id="@+id/message_title_layout"
         android:layout_width="match_parent"
         android:layout_height="68dp"
@@ -15,26 +17,35 @@
         <TextView
             android:id="@+id/fragment_messages_container_title"
             android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:layout_marginStart="@dimen/spacing_small"
-            android:layout_gravity="start"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="@dimen/spacing_normal"
+            android:layout_marginStart="@dimen/spacing_normal"
+            android:layout_marginTop="@dimen/spacing_normal"
             android:gravity="center"
             android:text="@string/message_info_default"
             android:textColor="@color/white"
-            android:textSize="@dimen/font_size_large" />
+            android:textSize="@dimen/font_size_large"
+            app:layout_constraintBottom_toBottomOf="@+id/message_title_layout"
+            app:layout_constraintLeft_toLeftOf="@+id/message_title_layout"
+            app:layout_constraintTop_toTopOf="@+id/message_title_layout" />
 
         <TextView
             android:id="@+id/fragment_messages_container_num_unread"
-            android:layout_width="40sp"
-            android:layout_height="40sp"
-            android:layout_gravity="end|center_vertical"
-            android:layout_marginEnd="@dimen/spacing_small"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:layout_gravity="end"
+            android:layout_marginBottom="@dimen/spacing_normal"
+            android:layout_marginEnd="@dimen/spacing_normal"
+            android:layout_marginTop="@dimen/spacing_normal"
             android:background="@drawable/circle_text"
             android:gravity="center"
             android:text="@string/new_messages_default"
             android:textColor="@color/white"
-            android:textSize="@dimen/font_size_large" />
-    </FrameLayout>
+            android:textSize="@dimen/font_size_large"
+            app:layout_constraintBottom_toBottomOf="@+id/message_title_layout"
+            app:layout_constraintRight_toRightOf="@+id/message_title_layout"
+            app:layout_constraintTop_toTopOf="@+id/message_title_layout" />
+    </android.support.constraint.ConstraintLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
