--- a/app/src/main/res/layout/fragment_messages_container.xml
+++ b/app/src/main/res/layout/fragment_messages_container.xml
@@ -64,7 +64,17 @@
             android:id="@+id/message_detail_container"
             android:layout_width="0dp"
             android:layout_height="match_parent"
-            android:layout_weight="4" />
+            android:layout_weight="4" >
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textAppearance="?android:attr/textAppearanceLarge"
+                android:text="@string/fragment_message_container_details_placeholder"
+                android:gravity="center"
+                android:layout_gravity="top|center_horizontal"
+                android:layout_marginTop="@dimen/activity_vertical_margin"
+            />
+        </FrameLayout>
 
     </LinearLayout>
 
