--- a/app/src/main/res/layout/fragment_messages_container.xml
+++ b/app/src/main/res/layout/fragment_messages_container.xml
@@ -1,11 +1,14 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/fragment_messages_container"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:orientation="vertical"
-    tools:context=".app.view.fragments.messags_panel_fragments.MessagesContainerFragment">
+<LinearLayout android:id="@+id/fragment_messages_container"
+              xmlns:android="http://schemas.android.com/apk/res/android"
+              xmlns:tools="http://schemas.android.com/tools"
+              android:layout_width="match_parent"
+              android:layout_height="wrap_content"
+              android:clickable="true"
+              android:orientation="vertical"
+              tools:context=".app.view.fragments.messags_panel_fragments.MessagesContainerFragment">
 
+    <!--android:focusable="false"-->
+    <!--android:focusableInTouchMode="true"-->
     <FrameLayout
         android:id="@+id/message_title_layout"
         android:layout_width="match_parent"
@@ -16,24 +19,24 @@
             android:id="@+id/fragment_messages_container_title"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:layout_marginStart="@dimen/spacing_small"
             android:layout_gravity="start"
+            android:layout_marginStart="@dimen/spacing_small"
             android:gravity="center"
             android:text="@string/message_info_default"
             android:textColor="@color/white"
-            android:textSize="@dimen/font_size_large" />
+            android:textSize="@dimen/font_size_large"/>
 
         <TextView
             android:id="@+id/fragment_messages_container_num_unread"
-            android:layout_width="40sp"
-            android:layout_height="40sp"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
             android:layout_gravity="end|center_vertical"
-            android:layout_marginEnd="@dimen/spacing_small"
+            android:layout_marginEnd="@dimen/spacing_normal"
             android:background="@drawable/circle_text"
             android:gravity="center"
             android:text="@string/new_messages_default"
             android:textColor="@color/white"
-            android:textSize="@dimen/font_size_large" />
+            android:textSize="@dimen/font_size_large"/>
     </FrameLayout>
 
     <LinearLayout
@@ -53,26 +56,27 @@
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="3"
-            tools:layout="@layout/fragment_messages_master_list" />
+            tools:layout="@layout/fragment_messages_master_list"/>
 
         <View
             android:layout_width="3dp"
             android:layout_height="wrap_content"
-            android:background="@drawable/box_shadow" />
+            android:background="@drawable/box_shadow"/>
 
         <FrameLayout
             android:id="@+id/message_detail_container"
             android:layout_width="0dp"
             android:layout_height="match_parent"
-            android:layout_weight="4" >
+            android:layout_weight="4">
             <TextView
+                android:id="@+id/fragment_messages_container_nomessage_textview"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textAppearance="?android:attr/textAppearanceLarge"
-                android:text="@string/fragment_message_container_details_placeholder"
-                android:gravity="center"
                 android:layout_gravity="top|center_horizontal"
                 android:layout_marginTop="@dimen/activity_vertical_margin"
+                android:gravity="center"
+                android:text="@string/fragment_message_container_details_placeholder"
+                android:textAppearance="?android:attr/textAppearanceLarge"
             />
         </FrameLayout>
 
