--- a/app/src/main/res/layout/fragment_image_message.xml
+++ b/app/src/main/res/layout/fragment_image_message.xml
@@ -1,11 +1,11 @@
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:fresco="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_marginEnd="@dimen/spacing_small"
-    android:layout_marginStart="@dimen/spacing_small" android:orientation="vertical">
+    android:layout_marginStart="@dimen/spacing_small"
+    android:orientation="vertical">
 
     <include layout="@layout/message_detail_title" />
 
@@ -16,14 +16,14 @@
 
         <com.facebook.drawee.view.SimpleDraweeView
             android:id="@+id/image_view"
-            android:layout_width="300dp"
-            android:layout_height="300dp"
+            android:layout_width="@dimen/image_preview_size"
+            android:layout_height="@dimen/image_preview_size"
             android:layout_gravity="top|center"
             android:layout_marginBottom="@dimen/spacing_normal"
             android:layout_marginTop="@dimen/spacing_large"
             fresco:actualImageScaleType="fitCenter"
             fresco:fadeDuration="500"
-            fresco:placeholderImage="@drawable/ic_message_black"/>
+            fresco:placeholderImage="@drawable/ic_message_black" />
 
         <View
             android:layout_width="wrap_content"
@@ -34,7 +34,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/spacing_normal"
-            android:text="Information"
+            android:text="@string/information_title"
             android:textColor="@color/gray"
             android:textSize="@dimen/font_size_large" />
 
@@ -46,43 +46,71 @@
             android:orientation="vertical">
 
             <!-- Latitude Value -->
-            <TextView
+            <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/dialog_go_to_latitude_text" />
+                android:layout_margin="@dimen/spacing_small"
+                android:orientation="horizontal">
 
-            <TextView
-                android:id="@+id/image_coord_lat"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
-
-            <!-- Longitude Value -->
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/dialog_go_to_longitude_text" />
-
-            <TextView
-                android:id="@+id/image_coord_lon"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
-
-            <!-- Source Type -->
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/dialog_image_source_type" />
-
-            <TextView
-                android:id="@+id/image_source_type"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
-
-            <Button android:id="@+id/image_goto_button"
+                <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_gravity="end"
-                    android:text="@string/fragment_messages_detail_goto"/>
+                    android:text="@string/dialog_go_to_latitude_text"
+                    android:textStyle="bold" />
+
+                <TextView
+                    android:id="@+id/image_coord_lat"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="@dimen/spacing_small" />
+            </LinearLayout>
+
+
+            <!-- Longitude Value -->
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="@dimen/spacing_small"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/dialog_go_to_longitude_text"
+                    android:textStyle="bold" />
+
+                <TextView
+                    android:id="@+id/image_coord_lon"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="@dimen/spacing_small" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="@dimen/spacing_small"
+                android:orientation="horizontal">
+                <!-- Source Type -->
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/dialog_image_source_type"
+                    android:textStyle="bold" />
+
+                <TextView
+                    android:id="@+id/image_source_type"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="@dimen/spacing_small" />
+            </LinearLayout>
+
+            <Button
+                android:id="@+id/image_goto_button"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="end"
+                android:text="@string/fragment_messages_detail_goto" />
 
 
         </LinearLayout>
