--- a/app/src/main/res/layout/fragment_messages_container.xml
+++ b/app/src/main/res/layout/fragment_messages_container.xml
@@ -6,9 +6,9 @@
     android:layout_height="match_parent"
     android:clickable="true"
     android:orientation="vertical"
-    tools:context="com.teamagam.gimelgimel.app.view.fragments.MessagesContainerFragment">
+    tools:context="com.teamagam.gimelgimel.app.view.fragments.messags_panel_fragments.MessagesContainerFragment">
 
-    <android.support.constraint.ConstraintLayout
+    <FrameLayout
         android:id="@+id/message_title_layout"
         android:layout_width="match_parent"
         android:layout_height="68dp"
@@ -18,22 +18,20 @@
             android:id="@+id/fragment_messages_container_title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_gravity="center|start"
             android:layout_marginBottom="@dimen/spacing_normal"
             android:layout_marginStart="@dimen/spacing_normal"
             android:layout_marginTop="@dimen/spacing_normal"
             android:gravity="center"
             android:text="@string/message_info_default"
             android:textColor="@color/white"
-            android:textSize="@dimen/font_size_large"
-            app:layout_constraintBottom_toBottomOf="@+id/message_title_layout"
-            app:layout_constraintLeft_toLeftOf="@+id/message_title_layout"
-            app:layout_constraintTop_toTopOf="@+id/message_title_layout" />
+            android:textSize="@dimen/font_size_large" />
 
         <TextView
             android:id="@+id/fragment_messages_container_num_unread"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
-            android:layout_gravity="end"
+            android:layout_width="@dimen/messages_count"
+            android:layout_height="@dimen/messages_count"
+            android:layout_gravity="center|end"
             android:layout_marginBottom="@dimen/spacing_normal"
             android:layout_marginEnd="@dimen/spacing_normal"
             android:layout_marginTop="@dimen/spacing_normal"
@@ -41,11 +39,8 @@
             android:gravity="center"
             android:text="@string/new_messages_default"
             android:textColor="@color/white"
-            android:textSize="@dimen/font_size_large"
-            app:layout_constraintBottom_toBottomOf="@+id/message_title_layout"
-            app:layout_constraintRight_toRightOf="@+id/message_title_layout"
-            app:layout_constraintTop_toTopOf="@+id/message_title_layout" />
-    </android.support.constraint.ConstraintLayout>
+            android:textSize="@dimen/font_size_large" />
+    </FrameLayout>
 
     <LinearLayout
         android:id="@+id/master_detail_layout"
@@ -72,7 +67,7 @@
             android:layout_height="wrap_content"
             android:background="@drawable/box_shadow" />
 
-        <FrameLayout
+        <android.support.v4.widget.NestedScrollView
             android:id="@+id/message_detail_container"
             android:layout_width="0dp"
             android:layout_height="match_parent"
