--- a/app/src/main/res/layout/fragment_message_detail_geo.xml
+++ b/app/src/main/res/layout/fragment_message_detail_geo.xml
@@ -15,42 +15,68 @@
         android:orientation="vertical">
 
         <!-- Latitude Value -->
-        <TextView
+        <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/dialog_go_to_latitude_text" />
+            android:layout_margin="@dimen/spacing_small"
+            android:orientation="horizontal">
 
-        <TextView
-            android:id="@+id/fragment_messages_detail_lat_textview"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            tools:text="123"/>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/dialog_go_to_latitude_text"
+                android:textStyle="bold" />
+
+            <TextView
+                android:id="@+id/fragment_messages_detail_lat_textview"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="@dimen/spacing_small"
+                tools:text="123" />
+        </LinearLayout>
 
         <!-- Longitude Value -->
-        <TextView
+        <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/dialog_go_to_longitude_text" />
+            android:layout_margin="@dimen/spacing_small"
+            android:orientation="horizontal">
 
-        <TextView
-            android:id="@+id/fragment_messages_detail_lon_textview"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            tools:text="123"/>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/dialog_go_to_longitude_text"
+                android:textStyle="bold" />
 
-        <Button
-            android:id="@+id/fragment_messages_detail_goto_button"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center|end"
-            android:text="@string/fragment_messages_detail_goto" />
+            <TextView
+                android:id="@+id/fragment_messages_detail_lon_textview"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="@dimen/spacing_small"
+                tools:text="123" />
+        </LinearLayout>
 
-        <Button
-            android:id="@+id/fragment_messages_detail_show_pin_button"
-            android:layout_width="wrap_content"
+        <FrameLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_gravity="center|end"
-            android:text="@string/fragment_messages_detail_show_pin" />
+            android:layout_marginTop="@dimen/spacing_large">
+
+            <Button
+                android:id="@+id/fragment_messages_detail_goto_button"
+                style="@style/Widget.AppCompat.Button.Colored"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center|start"
+                android:text="@string/fragment_messages_detail_goto" />
+
+            <Button
+                android:id="@+id/fragment_messages_detail_show_pin_button"
+                style="@style/Widget.AppCompat.Button.Colored"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center|end"
+                android:text="@string/fragment_messages_detail_show_pin" />
+        </FrameLayout>
 
     </LinearLayout>
 
